--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Side navigation -->
@@ -19,15 +18,7 @@
   <div class="main">
     ...
   </div>
-   <h1>Hello, my name is Yite!</h1>
-    <P>Yay! I have a website!</P>
-    <p>I am a Year 11 student in western Springs College, Auckland New Zealand.
-    </p>
-    <p>I come from china</p>
-    <p>I like paly basketball and play games</p>
-    <p>I like New Zealand because this is a beautiful country.</p>
-    <p>If you have a chance, you can visit my hometown Wenzhou.</p>
-    <img src="images/fish.jpeg" alt="Describe_the_image">
-
+    
+    Hello!!!!!!!!!!!!!!!!
 </body>
 </html>
